desktop tomobile sidebar collapse bug fixed

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -560,7 +560,7 @@ body {
 
     .footer-logos {
       height: 50px;
-      margin-left: 20px;
+      margin-left: 10px;
       left: 0px;
       position: absolute;
     }
